# tiny-rl

./: .gitignore  README.md
dashboard/: RL Tracker.html  app.jsx  package.json  wf-primitives.jsx
dashboard/docs/: SCHEMA.md
dashboard/hifi/: app.jsx  center.jsx  charts.jsx  data.jsx  rail-left.jsx  rail-right.jsx  styles.css  walker.jsx
dashboard/hifi/css/: dark-hc.css  dark-mc.css  dark.css  light-hc.css  light-mc.css  light.css
dashboard/runs/: index.json
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-13/: episodes.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-14/: checkpoints.jsonl  episodes.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-14/checkpoints/000000000/: checkpoint.json
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-14/checkpoints/000012288/: checkpoint.json
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-14/checkpoints/000022528/: checkpoint.json
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_16-25-50/: checkpoints.jsonl  episodes.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-ppo_2026-05-28_17-04-53/: checkpoints.jsonl  episodes.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-ppo_2026-06-03_16-15-38/: checkpoints.jsonl  episodes.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-sac_1779998141/: checkpoints.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-sac_2026-05-28_17-05-06/: checkpoints.jsonl  run.json  train_metrics.jsonl
dashboard/runs/BipedalWalker-v3-sac_2026-06-03_16-38-57/: checkpoints.jsonl  run.json  train_metrics.jsonl
dashboard/scripts/: ensure-index.js
dashboard/src/types/: rl-schema.ts
gym-practice/: AGENTS.md  README.md  logbook.md  logger_utils.py  main.py  pyproject.toml  test.py
gym-practice/algorithms/: ppo.py  ppo_jax.py  reinforce.py  reinforce_gae.py  sac.py  vanilla_policy_grad.py  vectorized_gae.py
market-agent/: main.py  pyproject.toml
market-agent/market_agent/: __init__.py  data.py  env.py
mini-dreamer/: AGENTS.md  README.md  _vizdoom.ini  data.py  diffusion.py  diffusion_jax.py  diffusion_test.py  jax_utils.py  logbook.md  logger_utils.py  minigrid_data.py  port_utils.py  ppo.py  pretrainer.py  pyproject.toml  todo.md  trainer.py  unet.py  unet_jax.py  vae.py  vae_jax.py  video_utils.py
mini-dreamer/experiments/: carracing-latent.toml  carracing-v1.toml  carracing.toml  minigrid-latent.toml  minigrid.toml  vizdoom-latent.toml  vizdoom.toml
(+221 files in other folders)
