[project]
name = "gym-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control,other]>=1.3.0",
    "loguru>=0.7.3",
    "mlx>=0.31.2",
    "rich>=15.0.0",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
]
