[project]
name = "gym-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "flax>=0.12.7",
    "gymnasium[all,classic-control,other]>=1.3.0",
    "jax==0.10.0",
    "jax-mps>=0.10.1",
    "loguru>=0.7.3",
    "mlx>=0.31.2",
    "rich>=15.0.0",
    "setuptools==81.0.0",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
]
