[project]
name = "market-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.19.0",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "kauldron",
    "dialog",
    "gemma",
    "jax>=0.10.0",
    "kagglehub>=1.0.1",
]
[tool.uv.sources]
gemma = { git = "https://github.com/google-deepmind/gemma" }
kauldron = { git = "https://github.com/google-research/kauldron.git" }
dialog = { git = "https://github.com/google-deepmind/dialog.git" }
