[project]
name = "mini-dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "gymnasium[box2d]>=1.3.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "loguru>=0.7.3",
    "minigrid>=3.1.0",
    "mlx>=0.31.2",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
]
